# operating-systems-labs

./: .clang-format  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
coursework/: CMakeLists.txt
lab1/: CMakeLists.txt
lab2/: CMakeLists.txt
lab3/: CMakeLists.txt
lab4/: CMakeLists.txt
